# arm

./: CMakeLists.txt  README.md
include/: edge.hpp  face.hpp  image3D.hpp  mesh.hpp  vertex.hpp  voxel.hpp
pgm3dReader/: Makefile  image3D.cpp  image3D.hpp  pgm3dReader.cpp  pgm3dReader.hpp  shepplogan.pgm3d  voxel.hpp
pgm3dReader/testFiles/: test_01.pgm3d  test_03.pgm3d
src/: image3D.cpp  main.cpp  mesh.cpp  vertex.cpp  voxel.cpp
tests/: test_01.pgm3d  test_02.pgm3d  test_04.pgm3d  test_05.pgm3d
